# AdventOfCode2024

./: CMakeLists.txt  README.md  format.ps1
day1/: historian_hysteria.cpp
day10/: hoof_it.cpp
day11/: plutonian_pebbles.cpp
day12/: garden_groups.cpp
day13/: claw_contraption.cpp
day14/: restroom_redoubt.cpp
day15/: warehouse_woes.cpp
day16/: reindeer_maze.cpp
day17/: chronospatial_computer.cpp
day18/: ram_run.cpp
day19/: linen_layout.cpp
day2/: red_nosed_reports.cpp
day20/: race_condition.cpp
day21/: keypad_conundrum.cpp
day22/: monkey_market.cpp
day23/: lan_party.cpp  lan_party.py
day24/: crossed_wires.cpp
day25/: code_chronicle.cpp
day3/: mull_it_over.cpp
day4/: ceres_search.cpp
day5/: print_queue.cpp
day6/: guard_gallivant.cpp
day7/: bridge_repair.cpp
day8/: resonant_collinearity.cpp
day9/: disk_fragmenter.cpp
utils/: debug.h  hash.h  mat.h  point2d.h  point3d.h
