cmake_minimum_required(VERSION 3.17)

if(WIN32)
    set(CMAKE_TOOLCHAIN_FILE "D:/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE INTERNAL "" FORCE)
endif()

project(AOC2024)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Boost COMPONENTS graph REQUIRED)

function(addExe name)
    set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${name})
    file(GLOB_RECURSE src LIST_DIRECTORIES false CONFIGURE_DEPENDS ${SRC_DIR}/*.h ${SRC_DIR}/*.cpp)
    add_executable(${name} ${src})
endfunction()

addExe(day1)
addExe(day2)
addExe(day3)
addExe(day4)
addExe(day5)
addExe(day6)
addExe(day7)
addExe(day8)
addExe(day9)
addExe(day10)
addExe(day11)
addExe(day12)
addExe(day13)
addExe(day14)
addExe(day15)
addExe(day16)
addExe(day17)
addExe(day18)
addExe(day19)
addExe(day20)
addExe(day21)
addExe(day22)
addExe(day23)

target_link_libraries(day23 Boost::graph)
